--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -44,7 +44,7 @@
         
     
       %div.row{ style: "margin-bottom: 30px; margin-right:auto; margin-left:auto; " }
-        %button.button.button-xlarge.button-actionable{ onclick: "$('#new_path').submit();" } Check name availability
+        %button.submit_button_big{ onclick: "$('#new_path').submit();", style: "float: none;" } Check name availability
       
       
   
