--- a/app/views/paths/start.html.haml
+++ b/app/views/paths/start.html.haml
@@ -47,7 +47,7 @@
                 You can always add, remove or rename any Section before you publish your Challenge.
     
       %div.row{ style: "margin-bottom: 30px; margin-right:auto; margin-left:auto; " }
-        %button.button.button-xlarge.button-actionable{ onclick: "$('#new_path').submit();" } Create My Challenge
+        %button.submit_button_big{ onclick: "$('#new_path').submit();", style: "float: none;" } Create My Challenge
   
 :javascript
   $(function(){
