--- a/app/views/sections/pre_boss.html.haml
+++ b/app/views/sections/pre_boss.html.haml
@@ -10,4 +10,4 @@
         %div{ style: "font-size: 27px; margin-left: 0; line-height: 21px; " }
           But can you handle the <strong>Boss Question</strong>?
         %div      
-          = link_to "I'm ready!",take_bonus_section_path(@section, params[:task_id], params[:session_id]), class: "button button-actionable", style: "float: right; line-height: 20px; margin-top: 18px;"
+          = link_to "I'm ready!",take_bonus_section_path(@section, params[:task_id], params[:session_id]), class: "submit_button", style: "line-height: 20px; margin-top: 18px;"
