--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -3,37 +3,49 @@
 /* General/Revolution - this should always stay at the top */
 pre.unstyled { padding: 0px; background-color: inherit; border: 0px; }
 pre { word-break: normal; }
+button, input { font-family: 'MuliLight', 'Helvetica', 'Arial'; }
 .profile_dropdown li { min-width: 130px; }
 .profile_dropdown li:hover { color: white; }
 .navbar{ z-index:1010; }
 .container.body { padding-top: 51px; }
-.submit_button {
-  background-color: #e9685b;
-  color: white;
+.sexy_buttons {
   float: right;
   font-weight: normal;
   box-shadow: none;
+  text-shadow: none;
   margin: 0;
   font-size: 15px;
   border: none;
   border-radius: 3px;
   padding: 7px 20px 5px 20px;
-  &:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white;}
+  &:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white; }
   &:active{ position: relative; top: 1px; }
 }
+.submit_button {
+  @extend .sexy_buttons;
+  background-color: #e9685b;
+  color: white;
+}
+.submit_button_big {
+  @extend .submit_button;
+  font-size: 18px;
+  line-height: 30px;
+}
 .submit_button_alt {
+  @extend .sexy_buttons;
   background-color: $employer_green;
   color: white;
-  float: right;
-  font-weight: normal;
-  box-shadow: none;
-  margin: 0;
-  font-size: 15px;
-  border: none;
-  border-radius: 3px;
-  padding: 7px 20px 5px 20px;
-  &:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white;}
-  &:active{ position: relative; top: 1px; }
+}
+.submit_button_alt_big {
+  @extend .submit_button_alt;
+  font-size: 18px;
+  line-height: 30px;
+}
+.submit_button_standard {
+  @extend .sexy_buttons;
+  background-color: #DAE1E4;
+  color: #333;
+  &:hover{ color: #333; }
 }
 .clear_floats { clear: both;}
 /* Offerchat box sizing */
