--- a/app/views/tasks/_submit_text.html.haml
+++ b/app/views/tasks/_submit_text.html.haml
@@ -1,14 +1,14 @@
 %div.CRbuttonspace
   - if @session_id
-    = link_to "Skip for now", finish_section_path(@section, @session_id), class: "button button-standard", style: "float: left;"
+    = link_to "Skip for now", finish_section_path(@section, @session_id), class: "submit_button_standard", style: "float: left;"
   - else @session_id.nil?
-    = link_to "Back", challenge_path(@section.path.permalink, c: true), class: "button button-standard", style: "float: left;"
+    = link_to "Back", challenge_path(@section.path.permalink, c: true), class: "submit_button_standard", style: "float: left;"
   
   - if @submitted_answer.reviewed_at
-    = f.submit "Update", class: "button button-actionable", id: "submit_button", style: "float:right;"
+    = f.submit "Update", class: "submit_button_standard", id: "submit_button"
   - else
-    = f.submit "Submit", class: "button button-actionable", id: "submit_button", style: "float:right;"
-    = f.submit "Save as Draft", class: "button button-standard", id: "draft_button", style: "float:right; margin-right: 10px;"  
+    = f.submit "Submit", class: "submit_button", id: "submit_button"
+    = f.submit "Save as Draft", class: "submit_button_standard", id: "draft_button", style: "margin-right: 10px;"  
   = image_tag ICON_LOADING_URL, size: "25x25", style: "float: right; display: none; padding: 5px;", id: "loading_image", alt: "Loading"
 
 :javascript
