eval sales page changes

--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -739,6 +739,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
       display: inline-block; width: 86%; margin-left: 12px; vertical-align: top; text-align: left;
       h3 { font-size: 24px; }
       p { font-size: 15px; line-height: 20px; margin-top: 8px; }
+      img { display: inline-block; vertical-align: top; margin-top: 21px; margin-right: 12px; opacity: 0.9;}
     }
   }
 }
