--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -76,4 +76,4 @@
               
             
         %div.row{ style: "margin: 40px auto 30px;" }
-          = f.submit @evaluation.new_record? ? "Create Evaluation" : "Save Evaluation", class: "button button-actionable"
+          = f.submit @evaluation.new_record? ? "Create Evaluation" : "Save Evaluation", class: "submit_button", style: "float: none;"
