--- a/app/views/paths/_difficulty_warning.html.haml
+++ b/app/views/paths/_difficulty_warning.html.haml
@@ -1,5 +1,7 @@
 .welcome{ style: "margin: 5px 5px 15px 5px;" }
   .holder
     .text_box{ style: "font-size: 16px; width: 100%; margin: 0px; line-height: 20px;" }
-      This challenge does not have enough difficult questions to accurately assess your candidates' skills beyond whether they have a skill level of Competent.
-      Add questions of greater difficulty, or update the difficulty of existing questions to help MetaBright better calculate the skill levels of your candidates.
+      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/warning.png"}
+      %p{ style: "width: 90%; display: inline-block;"}
+        This Challenge does not have enough difficult questions to accurately assess your candidates' skills beyond a level of 'Competent.'
+        Add questions of greater difficulty, or update the difficulty of existing questions to help MetaBright better calculate the skill levels of your candidates.
