--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -3,7 +3,7 @@
 /* General/Revolution - this should always stay at the top */
 pre.unstyled { padding: 0px; background-color: inherit; border: 0px; }
 pre { word-break: normal; }
-button, input { font-family: 'MuliLight', 'Helvetica', 'Arial'; }
+//button, input { font-family: 'MuliLight', 'Helvetica', 'Arial'; }
 .profile_dropdown li { min-width: 130px; }
 .profile_dropdown li:hover { color: white; }
 .navbar{ z-index:1010; }
@@ -15,10 +15,11 @@ button, input { font-family: 'MuliLight', 'Helvetica', 'Arial'; }
   text-shadow: none;
   margin: 0;
   font-size: 15px;
-  border: none;
   border-radius: 3px;
   padding: 7px 20px 5px 20px;
-  &:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white; }
+  border: 1px solid #DDD;
+  //&:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white; }
+  &:hover{ box-shadow: 0px 0px 2px black; text-decoration: none; color: white; }
   &:active{ position: relative; top: 1px; }
 }
 .submit_button {
@@ -1140,25 +1141,24 @@ th {
    h3 { margin-top: 10px; }
   }
   .header {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);;
     text-align: center;
     padding-bottom: 10px;
     
-    img {
-      display: inline-block;
-      height: 70px;
-      margin-right: 10px;
-    }
     h1 { 
       position: relative;
       top: 8px; 
       font-size: 41px;
       text-align: center;
       line-height: 62px;
-      letter-spacing: 1.5px;
-      word-spacing: 1px;
+      letter-spacing: 2px;
       display: inline-block;
     }  
+    h2 {
+      font-size: 22px;
+      line-height: 32px;
+      margin-top: 14px;
+      letter-spacing: 1px;
+    }
   }
   .body { 
     padding: 10px 16px; 
@@ -1206,9 +1206,7 @@ th {
       font-size: 18px;
       line-height: 31px;
       padding-top: 18px;
-      margin: 0;
-      position: relative;
-      top: 13px; 
+      margin: 13px 0 0 0;
       &:nth-child(1) { padding-top: 0; } 
     }
     .happy_customers{
@@ -1301,6 +1299,15 @@ th {
           img { height: 100px; width: 100px; }
         }
       }
+    }
+    .summary {
+      width: 108.4%;
+      position: relative;
+      left: -37px;
+      background-color: $landing_yellow;
+      text-align: left; 
+      margin-top: 43px; 
+      padding-bottom: 24px;
     }
     .free_trial {
       text-align: center;
