word choice change

--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -168,7 +168,7 @@
               #collapseOne.accordion-body.collapse.in
                 .accordion-inner 
                   We evaluate your candidates with things called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
-                  We distill all this information down into one easy to understand percentile ranking that indicates how capable a candidate actually is. 
+                  We distill all this information down into one easy to understand score that indicates how capable a candidate actually is. 
             .accordion-group 
               .accordion-heading 
                 %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseSix"} 
