custom landing eval sales page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 //= require challenge
 //= require core
 //= require css_tooltips
+//= require custom_landings
 //= require font
 //= require landing
 //= require launchpad
