--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -10,3 +10,11 @@ $employer_green: rgba(114, 153, 89, 0.88);
 $employer_orange_light: rgba(212, 152, 123, 0.14);
 $employer_orange_light_opaque: rgba(212, 152, 123, 0.5);
 $employer_green_light: rgba(150, 201, 117, 0.27);
+
+$evaluator_text_color: #8a8d99;
+// These variables are for the jagged edge borders on the .click-it divs
+$click_it_color: #ffec73;
+$click_it_tri_size: 60px;
+
+// Variable for custom eval landing pages
+$opacity_level: rgba(255, 255, 255, 0.7);
