--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -3,9 +3,6 @@
   .container.body { width: 980px; }
   .aboutcontainer{ width: 980px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:27px;} 
   .aboutbox { border-radius: 0; padding: 20px 20px 0; } 
-  #screen_carousel { width: 700px; height: 400px; margin: 30px auto; } 
-  #screen_carousel .carousel-control{ top: 50%; } 
-  #screen_carousel .item img { width: 100%; height: 400px; } 
    
    
 %script{ src: "https://raw.github.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js", type: "text/javascript" } 
@@ -64,7 +61,7 @@
           %h2{ style: "margin-bottom: 0;"} 
             The MetaBright Evaluator
           %p.be_bold
-            Never waste your time in an interview again. The MetaBright Evaluator is a skill assessment platform that measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. Just direct your candidates to your unique MetaBright URL, and we take care of the rest.
+            Never waste your time in an interview again. The MetaBright Evaluator is a skills assessment platform that measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. Just direct your candidates to your unique MetaBright URL, and we take care of the rest.
         .sexy_time 
           %section.gradient_down 
             .holder.gradient_up 
