--- a/app/views/pages/airs_landing.html.haml
+++ b/app/views/pages/airs_landing.html.haml
@@ -120,7 +120,7 @@
                 .image.right{ style: "width: 55%; margin-top:11px;" } 
                   %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade5.png"} 
     %article#art_4
-      .click-it.top.bottom
+      .click-it.jagged_top.jagged_bottom
         .holder
           %p 
             %span Guaranteed
@@ -214,7 +214,7 @@
                   We’ve found that people are more likely to stay engaged with a Challenge when incentives are in place to make the process feel like a game.  
                   This means we can evaluate your candidates with a higher degree of confidence and we can deliver more examples of their abilities! 
     %article#art_9
-      .click-it.top{ style: "padding-bottom: 58px; margin-bottom: -11px;"}
+      .click-it.jagged_top{ style: "padding-bottom: 58px; margin-bottom: -11px;"}
         .holder
           %p 
             %span Guaranteed
