--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -50,7 +50,7 @@
                   .picture
                     = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/val.jpg", class: "img-circle"
         .clear_floats
-        .click-it.top.bottom{ style: "margin: -8px 0 15px 0;"}
+        .click-it.jagged_top.jagged_bottom{ style: "margin: -8px 0 15px 0;"}
           .holder
             %p 
               %span Guaranteed
@@ -113,7 +113,7 @@
                   Know for certain when a candidate is deserving of an interview. Examine their performance, drill down into responses, and see how they stack-up against their peers.  
               .image.right{ style: "width: 55%; margin-top:11px;" } 
                 %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade5.png"} 
-        .click-it.top.bottom{ style: "margin: 10px 0 65px;"}
+        .click-it.jagged_top.jagged_bottom{ style: "margin: 10px 0 65px;"}
           .holder
             %p 
               %span Guaranteed
@@ -205,7 +205,7 @@
                 .accordion-inner 
                   We’ve found that people are more likely to stay engaged with a Challenge when incentives are in place to make the process feel like a game.  
                   This means we can evaluate your candidates with a higher degree of confidence and we can deliver more examples of their abilities! 
-        .click-it.top{ style: "padding-bottom: 58px; margin-bottom: -11px;"}
+        .click-it.jagged_top{ style: "padding-bottom: 58px; margin-bottom: -11px;"}
           .holder
             %p 
               %span Guaranteed
