--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -93,7 +93,7 @@
       
       - if not current_user.seen_opportunities
         %div{ style: "margin: 5px 0 0 0; text-align: center;" }
-          = link_to "Continue", finish_section_path(@section, @session_id, s: 0), class: "button button-actionable"
+          = link_to "Continue", finish_section_path(@section, @session_id, s: 0), class: "submit_button", style: "float: none;"
       - else
         %div{ style: "margin: 15px 0 0 0;"}
           = link_to "Start next round", continue_path_path(@section.path.permalink), class: "button button-actionable", style: "float: right;"
